--- a/Week 8 JS/JS/WebContent/intro/html/intro.html
+++ b/Week 8 JS/JS/WebContent/intro/html/intro.html
@@ -4,6 +4,8 @@
 <meta charset="ISO-8859-1">
 <title>intro to js</title>
 <script src="../js/intro.js"></script>
+<script src="../js/arraysAndObjects.js"></script>
+
 </head>
 <body>
 
