restart web service

--- a/Week 6 Servers/BootWebService/src/main/webapp/html/dashboard.html
+++ b/Week 6 Servers/BootWebService/src/main/webapp/html/dashboard.html
@@ -24,9 +24,10 @@
 				</a></li>
 				<li class="nav-item"><a class="nav-link" href="#">Features</a>
 				</li>
-				<li class="nav-item"><a class="nav-link" href="#">Pricing</a></li>
+				<li class="nav-item"><a class="nav-link" href="logout.app">logout</a></li>
 			</ul>
 			<span class="navbar-text"> Welcome to our landing page </span>
+			<a href="logout.app" >logout</a>
 		</div>
 	</nav>
 	
