pushing last nights code

--- a/Week 6 Servers/NewWebServer/src/main/webapp/html/success.html
+++ b/Week 6 Servers/NewWebServer/src/main/webapp/html/success.html
@@ -5,6 +5,22 @@
 <title>Insert title here</title>
 </head>
 <body>
-success
+	<div id="username"></div>
+	<div id="password"></div>
+
+<a href="logout.app">logout</a>
+
+<button id="generator">generate dom</button>
+<button id="clear">clear dom</button>
+
+
+<div>
+	<p>register new user</p>
+	<input id="name" type="text" placeholder="username">
+	<input id="pass" type="text" placeholder="password">
+	<button id="register">register user</button>
+</div>
+
+	<script type="text/javascript" src="http://localhost:8080/NewWebServer/js/success.js"></script>
 </body>
 </html>
