very strange, have to make request twice for session to invalidate

--- a/Week 6 Servers/BootWebService/src/main/webapp/html/dashboard.html
+++ b/Week 6 Servers/BootWebService/src/main/webapp/html/dashboard.html
@@ -27,7 +27,7 @@
 				<li class="nav-item"><a class="nav-link" href="logout.app">logout</a></li>
 			</ul>
 			<span class="navbar-text"> Welcome to our landing page </span>
-			<a href="logout.app" >logout</a>
+			<a href="nogo.app" >logout</a>
 		</div>
 	</nav>
 	
